<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:clipChildren="false"
              android:gravity="center"
              android:orientation="vertical">

    <Button
        android:id="@+id/menuOverviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/menu_oveview"/>

    <Button
        android:id="@+id/elevationOutlineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/menu_elevation_outline"/>

    <Button
        android:id="@+id/imageListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/menu_image_list"/>

    <Button
        android:id="@+id/elevationListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/menu_elevation_list"/>

    <Button
        android:id="@+id/cardElevationListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/menu_card_elevation_list"/>

    <TextView
        android:id="@+id/elevationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_elevation_bar_label"/>

    <SeekBar
        android:id="@+id/elevationBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="50"
        android:progress="8"/>

    <TextView
        android:id="@+id/columnsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/menu_list_columns_label"/>

    <SeekBar
        android:id="@+id/columnsBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="50"
        android:progress="8"/>
</LinearLayout>
